--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -582,6 +582,229 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "3.1"
+      ],
+      "metadata": {
+        "id": "J571taBAD-e6"
+      },
+      "id": "J571taBAD-e6"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data = pd.read_csv('/content/sample_data/contraception_hw.csv')\n",
+        "#Tabulate\n",
+        "method_counts = data['method'].value_counts()\n",
+        "print(\"Tabulation of 'method' variable:\")\n",
+        "print(method_counts)\n",
+        "#Cross-tabulate method and numberchildren\n",
+        "cross_tab = pd.crosstab(data['method'], data['numberChildren'], margins=True)\n",
+        "print(\"\\nCross-tabulation of 'method' and 'numberChildren':\")\n",
+        "print(cross_tab)\n",
+        "#Calculate the average number of children for each contraceptive method\n",
+        "average_children_per_method = data.groupby('method')['numberChildren'].mean()\n",
+        "print(\"\\nAverage number of children for each contraceptive method:\")\n",
+        "print(average_children_per_method)"
+      ],
+      "metadata": {
+        "id": "mZnPLofKD_NE"
+      },
+      "id": "mZnPLofKD_NE",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On average it seems that couples that use birth control pills have more children than those that dont."
+      ],
+      "metadata": {
+        "id": "zqz_LMaqEIGR"
+      },
+      "id": "zqz_LMaqEIGR"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.2"
+      ],
+      "metadata": {
+        "id": "PEG9-mCGENKI"
+      },
+      "id": "PEG9-mCGENKI"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "#Split the data\n",
+        "X = data.drop(columns=['method'])\n",
+        "y = data['method']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ],
+      "metadata": {
+        "id": "h_xijKLQEODp"
+      },
+      "id": "h_xijKLQEODp",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.3"
+      ],
+      "metadata": {
+        "id": "ecRbIcXyEOxf"
+      },
+      "id": "ecRbIcXyEOxf"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "import numpy as np\n",
+        "\n",
+        "#create tree\n",
+        "regression_tree = DecisionTreeRegressor(random_state=42)\n",
+        "regression_tree.fit(X_train, y_train)\n",
+        "leaf_values = regression_tree.tree_.value.squeeze()\n",
+        "#print node values\n",
+        "print(\"Terminal Node Values:\")\n",
+        "for i, value in enumerate(leaf_values):\n",
+        "    print(f\"Node {i}: {value}\")"
+      ],
+      "metadata": {
+        "id": "-pGPx4-6EQ7b"
+      },
+      "id": "-pGPx4-6EQ7b",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The terminal node values take continuous numerical values, such as 1.93, 2.30, and 2.62. These values do not correspond to any meaningful categories in the context of contraceptive method prediction. The issue here is that we used a regression tree, which is designed for predicting continuous numerical values, to predict contraceptive methods, which is not an appropriate use case."
+      ],
+      "metadata": {
+        "id": "1sS1Mkg2ESzu"
+      },
+      "id": "1sS1Mkg2ESzu"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.4"
+      ],
+      "metadata": {
+        "id": "ko56QSFzETV8"
+      },
+      "id": "ko56QSFzETV8"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.tree import export_text\n",
+        "\n",
+        "# Initialize the classification tree model\n",
+        "classification_tree = DecisionTreeClassifier(random_state=42)\n",
+        "\n",
+        "# Fit the classification tree to the data\n",
+        "classification_tree.fit(X_train, y_train)\n",
+        "\n",
+        "# Make predictions on the test data\n",
+        "y_pred_classification = classification_tree.predict(X_test)\n",
+        "\n",
+        "# Calculate accuracy as a measure of classification performance\n",
+        "accuracy = accuracy_score(y_test, y_pred_classification)\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "\n",
+        "# Print the tree structure\n",
+        "tree_structure = export_text(classification_tree, feature_names=list(X_train.columns))\n",
+        "print(\"Tree Structure:\")\n",
+        "print(tree_structure)"
+      ],
+      "metadata": {
+        "id": "JP9D2zsMEX11"
+      },
+      "id": "JP9D2zsMEX11",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The classification tree is designed for categorical prediction, with terminal nodes representing contraceptive method categories and binary splits based on the Unnamed 0 variable. It achieves high accuracy and provides a clear hierarchy of criteria for classifying individuals into the different contraceptive method groups. The classification tree algorithm uses the Unnamed 0 variable as the primary feature for making binary splits to classify individuals into different contraceptive method categories. In broad terms, the classification tree suggests that individuals with Unnamed 0 values within specific ranges are more likely to use particular contraceptive methods. Those with lower values are associated with no contraceptive use, while individuals with intermediate values are more likely to use long-term contraception methods. Those with higher values are inclined towards short-term contraception methods."
+      ],
+      "metadata": {
+        "id": "1Yhrl7SpEZ_l"
+      },
+      "id": "1Yhrl7SpEZ_l"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.5"
+      ],
+      "metadata": {
+        "id": "fOszOpEeEcRs"
+      },
+      "id": "fOszOpEeEcRs"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "#compute confusion matrix\n",
+        "confusion = confusion_matrix(y_test, y_pred_classification)\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(confusion)\n",
+        "\n",
+        "#find accuracy\n",
+        "overall_accuracy = np.sum(np.diag(confusion)) / np.sum(confusion)\n",
+        "class_accuracies = np.diag(confusion) / np.sum(confusion, axis=1)\n",
+        "#output\n",
+        "print(\"Overall Accuracy:\", overall_accuracy)\n",
+        "print(\"Accuracy for Class 1 (No Contraception):\", class_accuracies[0])\n",
+        "print(\"Accuracy for Class 2 (Long Term):\", class_accuracies[1])\n",
+        "print(\"Accuracy for Class 3 (Short Term):\", class_accuracies[2])"
+      ],
+      "metadata": {
+        "id": "V0aVqQ7rEeU9"
+      },
+      "id": "V0aVqQ7rEeU9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.6"
+      ],
+      "metadata": {
+        "id": "AGzqnK9kEf4p"
+      },
+      "id": "AGzqnK9kEf4p"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using a linear probability model is inappropriate for this exercise as it is designed for binary outcomes and assumes a linear relationship between predictors and probabilities. However, the contraceptive method choice in this dataset involves three distinct categories, making it a multi-class classification problem. Linear probability models can lead to inaccurate predictions, difficulties in threshold selection, and invalid results. In contrast, classification trees are better suited for multi-class classification, offering a more accurate and interpretable approach for this exercise."
+      ],
+      "metadata": {
+        "id": "onHozHTYEi9C"
+      },
+      "id": "onHozHTYEi9C"
+    },
+    {
+      "cell_type": "markdown",
       "id": "7bd15c6b-4c7c-4230-a199-e03e1054ec6a",
       "metadata": {
         "id": "7bd15c6b-4c7c-4230-a199-e03e1054ec6a"
